<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_num_control_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_no_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="55dp"
        android:text="@string/txt_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_num_control_cambios" />

    <TextView
        android:id="@+id/view_primer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="62dp"
        android:text="@string/txt_primer_ap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_nom" />

    <TextView
        android:id="@+id/view_segundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="59dp"
        android:text="@string/txt_segundo_ap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_primer" />

    <TextView
        android:id="@+id/edit_edad_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="46dp"
        android:text="@string/txt_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_segundo" />

    <TextView
        android:id="@+id/edit_carrera_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="56dp"
        android:text="@string/txt_carrera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_edad_cambios" />

    <TextView
        android:id="@+id/edit_semestre_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="55dp"
        android:text="@string/txt_semestre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_carrera_cambios" />

    <EditText
        android:id="@+id/edit_num_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/edit_nombre_cambios"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_nombre_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/edit_primer_cambios"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_primer_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/edit_segundo_cambios"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_segundo_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/spinner_edad"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_edad"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_carrera"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/sp_carrera"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_semestre"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/sp_semestre"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cambios"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="206dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="186dp"
        android:onClick="cambios"
        android:text="@string/txt_actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_semestre" />
</android.support.constraint.ConstraintLayout>