<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_segundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/spinner_edad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/edit_primer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_edad"
        app:layout_constraintEnd_toStartOf="@+id/spinner_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="29dp"
        android:text="@string/txt_segundo_ap"
        app:layout_constraintEnd_toStartOf="@+id/edit_segundo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="43dp"
        android:text="@string/txt_primer_ap"
        app:layout_constraintEnd_toStartOf="@+id/edit_primer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="51dp"
        android:text="@string/txt_nombre"
        app:layout_constraintEnd_toStartOf="@+id/edit_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:text="Altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="49dp"
        android:text="@string/txt_no_control"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/edit_num_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_semestre"
        app:layout_constraintEnd_toStartOf="@+id/sp_semestre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_carrera"
        app:layout_constraintEnd_toStartOf="@+id/sp_carrera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edit_num_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_primer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/edit_segundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinner_edad"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_semestre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <Spinner
        android:id="@+id/sp_semestre"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_carrera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Spinner
        android:id="@+id/sp_carrera"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_agregar_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="196dp"
        android:onClick="agregar"
        android:text="@string/txt_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


</android.support.constraint.ConstraintLayout>
